--- a/site/psi19/quiz/templates/quiz/home.html
+++ b/site/psi19/quiz/templates/quiz/home.html
@@ -1,135 +1,42 @@
-{% load static %}
+{% extends "quiz/base.html" %}
 
-<!doctype html>
-<html lang="en">
+{% block content %}
 
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<div class="container text-center">
 
-        <title>HomePage</title>
 
-        <!-- Tab icon -->
-        <link rel="icon" href="{% static 'quiz/uqizavanje_logo.png' %}">
+    <div class="row d-flex justify-content-center" style="margin: 15px;">
 
-        <!-- CSS files-->
-
-            <!-- Bootstrap CSS -->
-            <link rel="stylesheet" href="{% static 'quiz/bootstrap.min.css' %}">
-            <!-- Animate CSS -->
-            <link rel="stylesheet" href="{% static 'quiz/animate.css' %}">
-            <!-- Font Awesome -->
-            <link rel="stylesheet" href="{% static 'quiz/font-awesome.min.css' %}">
-            <!-- style CSS -->
-            <link rel="stylesheet" href="{% static 'quiz/style.css' %}">
-            <!-- themify CSS -->
-        <!-- /CSS files -->
-
-    </head>
-
-    <body>
-
-    <!-- Header and Menu -->
-    <header class="header_area">
-
-        <!-- Header -->
-        <div class="sub_header">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-xs-8 col-md-8 col-xl-6">
-                        <div id="logo">
-                            <a href="#"><img src="{% static 'quiz/uqizavanje_logo.png' %}" alt="" title="" /></a>
-                        </div>
-                    </div>
-                    <div class="col-xs-4 col-md-4 col-xl-6">
-                        {% if user.is_authenticated %}
-                        <div class="float-right">
-                            <a href="#" class="btn btn-outline-primary"><i class="#"></i>Signed In</a>
-                        </div>
-                        {% else %}
-                        <div class="float-right">
-                            <a href="#" class="btn btn-outline-primary"><i class="#"></i>Not Signed In</a>
-                        </div>
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
+        <div class="col-md-10 homepage_tile">
+            <a href="#"><div class="col-md-12">Make Game</div></a>
         </div>
-        <!-- /Header -->
 
-
-        <!-- Menu -->
-        <div class="main_menu">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-
-                        <!-- Navbar -->
-                        <nav class="navbar navbar-expand-lg navbar-light">
-                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-
-                            <div class="collapse navbar-collapse">
-                                <ul class="navbar-nav mr-auto">
-                                    <li class="nav-item active">
-                                        <a class="nav-link active" href="#">Home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link">Rank List</a>
-                                    </li>
-                                </ul>
-                            </div>
-
-                            <div class="header_social_icon d-none d-sm-block">
-                                <ul>
-                                    <li><!-- Search form -->
-                                        <form class="form-inline mr-auto">
-                                            <div class="md-form my-0">
-                                                <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                                                <i class="ti-search text-white ml-3" aria-hidden="true"></i>
-                                            </div>
-                                        </form>
-                                    </li>
-                                </ul>
-                            </div>
-
-                        </nav>
-                        <!-- /Navbar -->
-
-                    </div>
-                </div>
-            </div>
+        <div class="col-md-5 homepage_tile">
+            <a href="#"><div class="col-md-12">History</div></a>
         </div>
-        <!-- /Menu -->
 
-    </header>
-    <!-- /Header and Menu-->
-
-
-    <!-- Page Content -->
-
-
-    <!-- /Page Content -->
-
-
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="row text-center">
-                <p class="col-lg-8 col-md-12">Copyright &copy; Bauk&Sons</p>
-            </div>
+        <div class="col-md-5 homepage_tile">
+            <a href="#"><div class="col-md-12">Sport</div></a>
         </div>
-    </footer>
-    <!-- /Footer -->
 
-    <!-- Scripts -->
-        <!-- jquery -->
-        <script src="{% static 'quiz/jquery-1.12.1.min.js' %}"></script>
-        <!-- bootstrap js -->
-        <script src="{% static 'quiz/bootstrap.min.js' %}"></script>
-    <!-- /Scripts -->
+        <div class="col-md-5 homepage_tile">
+            <a href="#"><div class="col-md-12">General Knowledge</div></a>
+        </div>
 
-    </body>
+        <div class="col-md-5 homepage_tile">
+            <a href="#"><div class="col-md-12">Movie</div></a>
+        </div>
 
-</html>
+        <div class="col-md-5 homepage_tile">
+            <a href="#"><div class="col-md-12">Geography</div></a>
+        </div>
+
+        <div class="col-md-5 homepage_tile">
+            <a href="#"><div class="col-md-12">Literature</div></a>
+        </div>
+
+    </div>
+
+</div>
+
+{% endblock content %}
