--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -43,12 +43,16 @@
                     <div class="col-xs-4 col-md-4 col-xl-6">
                         {% if user.is_authenticated %}
                         <div class="float-right">
+                            Welcome, {{ user.get_username }}
                             <a href="/accounts/logout" class="btn btn-outline-primary"><i class="#"></i>Logout</a>
                         </div>
                         {% else %}
                         <div class="float-right">
                             <a href="/accounts/login" class="btn btn-outline-primary"><i class="#"></i>Sign In</a>
                         </div>
+                        <div class="float-right">
+                                <a href="/signup" class="btn btn-outline-primary"><i class="#"></i>Create Account</a>
+                            </div>
                         {% endif %}
                     </div>
                 </div>
