--- a/site/psi19/quiz/templates/quiz/add_question.html
+++ b/site/psi19/quiz/templates/quiz/add_question.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 
-<form action="/submit_question/" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="Submit">
-</form>
-
+<div style="padding:15px">
+    <form action="/submit_question/" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Submit">
+    </form>
+</div>
 {% endblock content %}
