--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -84,13 +84,16 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="{% url 'quiz:rank_list'%}">Rank List</a>
-                                    </li>    
+                                    </li>
+
+                                    <!--Moderator, admin i senior mogu da dodaju pitanja-->
+                                    {% if user.is_senior or user.is_superuser %}
 
                                     <li class="nav-item">
-                                        <!-- NOTE - SOMWHOW SHOW THIS ONLY TO MODERATORS -->
-                                        <!-- HERE FOR TESTING PURPOSES -->
                                         <a href="/submit_question" class="nav-link">Submit a queston</a>
                                     </li>
+
+                                    {% endif %}
 
                                 </ul>
                             </div>
