Added a few questions, added user options

--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -85,68 +85,55 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="{% url 'quiz:rank_list'%}">Rank List</a>
                                     </li>
-                                    
+
 
                                     <!-- Danlo pls help ovo je ruzno ko djvao :( -->
                                     <!--Moderator, admin i senior mogu da dodaju pitanja-->
                                     {% if user.is_senior %}
 
-                                    <li class="nav-item">
-                                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
-                                            id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
-                                            Senor options
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            Senior options
                                         </a>
-
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <a href="/submit_question" class="nav-link">Submit a queston</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="dropdown-item" href="elements.html">Dodaj pitanje</a>
+                                            <a class="dropdown-item" href="single-blog.html">Postani moderator</a>
                                         </div>
-
-
                                     </li>
 
                                     {% endif %}
 
                                     {% if user.is_superuser %}
 
-                                    <li class="nav-item">
-                                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
-                                            id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Admin options
                                         </a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="dropdown-item" href="elements.html">Dodaj pitanje</a>
+                                            <a class="dropdown-item" href="elements.html">Odobri pitanje</a>
+                                            <a class="dropdown-item" href="single-blog.html">Dodeli moderatora</a>
+                                            <a class="dropdown-item" href="single-blog.html">Blokiraj korisnika</a>
 
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <a href="/submit_question" class="nav-link">Submit a queston</a>
-                                            <a class="dropdown-item" href="#">Approve questions</a>
-                                            <a class="dropdown-item" href="/grant_moderator">Grant moderator</a>
                                         </div>
-
-
                                     </li>
 
                                     {% endif %}
 
                                     {% if user.moderator %}
 
-                                    <li class="nav-item">
-                                        <a class="btn btn-secondary dropdown-toggle" href="#" role="button"
-                                            id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             Moderator options
                                         </a>
-
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <a href="/submit_question" class="nav-link">Submit a queston</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
+                                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                            <a class="dropdown-item" href="elements.html">Dodaj pitanje</a>
+                                            <a class="dropdown-item" href="elements.html">Odobri pitanje</a>
                                         </div>
-
-
                                     </li>
-
                                     {% endif %}
 
 
@@ -171,7 +158,7 @@
 
                                     {% endif %}
 
-                                    
+
 
                                 </ul>
                             </div>
