Global top list fixed

--- a/site/psi19/quiz/templates/quiz/rank_list.html
+++ b/site/psi19/quiz/templates/quiz/rank_list.html
@@ -20,7 +20,7 @@
                 {% for user in top_10_users %}
                     
                     <tr>
-                        <td>{{user.user}}</td>
+                        <td>{{user.username}}</td>
                         <td>{{user.ranking}}</td>
                     </tr>
                             
