--- a/site/psi19/quiz/templates/quiz/search_results.html
+++ b/site/psi19/quiz/templates/quiz/search_results.html
@@ -37,27 +37,57 @@
 
                     <p>{{record.user.rank}}</p>
 
-
+                    <!-- Za bilo koju od ovih opcija korisnik mora biti logovan-->
                     {% if user.is_authenticated %}
+
                         {% if record.already_friends %}
-                        <div class="card-body text-center">
-                            <form method="GET" action="/unfollow/">
-                                <!--!!!! Nabudzeno resenje koje se uzda da su username takodje unique !!!!-->
-                                <input type="hidden" name="username" value='{{record.user.username}}'>
-                                <input type="submit" class="btn btn-outline-primary" value="UNFOLLOW"></input>
-                            </form>
-                        </div>
+                            
+                            <div class="card-body text-center">
+                                <form method="GET" action="/unfriend/">
+                                    <!--!!!! Nabudzeno resenje koje se uzda da su username takodje unique !!!!-->
+                                    <input type="hidden" name="username" value='{{record.user.username}}'>
+                                    <input type="submit" class="btn btn-outline-primary" value="UNFRIEND"></input>
+                                </form>
+                            </div>
 
                         {% else %}
 
-                        <div class="card-body text-center">
-                            <form method="GET" action="/follow/">
-                                <!--!!!! Nabudzeno resenje koje se uzda da su username takodje unique !!!!-->
-                                <input type="hidden" name="username" value='{{record.user.username}}'>
-                                <input type="submit" class="btn btn-outline-primary" value="FOLLOW"></input>
-                            </form>
-                        </div>
+                            <!--ako mi korisnik nije prijatelj, a ja nisam poslao zahtev za prijateljstvo -->                        
+                            {% if  not record.request_sent %}
+                                
+                                <!-- ako nisam primio zahtev od korisnika, onda mogu da mu posaljem zahtev-->
+                                {% if not record.request_recieved %}  
+                                    <div class="card-body text-center">
+                                        <form method="GET" action="/send_request/">
+                                            <!--!!!! Nabudzeno resenje koje se uzda da su username takodje unique !!!!-->
+                                            <input type="hidden" name="username" value='{{record.user.username}}'>
+                                            <input type="submit" class="btn btn-outline-primary" value="SEND REQUEST"></input>
+                                        </form>
+                                    </div>
+                                {% else %}
+                                    <!-- ako mi je ipak poslao zahtev, mogu da ga prihvatim -->
+                                    <div class="card-body text-center">
+                                        <form method="GET" action="/confirm_request/">
+                                            <!--!!!! Nabudzeno resenje koje se uzda da su username takodje unique !!!!-->
+                                            <input type="hidden" name="username" value='{{record.user.username}}'>
+                                            <input type="submit" class="btn btn-outline-primary" value="CONFIRM REQUEST"></input>
+                                        </form>
+                                    </div>        
+                                {% endif %}
 
+                            {% else %}
+                                
+                                <!-- ako sam poslao zahtev a zelim da ga ponistim -->
+                                <div class="card-body text-center">
+                                    <form method="GET" action="/cancel_request/">
+                                        <!--!!!! Nabudzeno resenje koje se uzda da su username takodje unique !!!!-->
+                                        <input type="hidden" name="username" value='{{record.user.username}}'>
+                                        <input type="submit" class="btn btn-outline-primary" value="CANCEL REQUEST"></input>
+                                    </form>
+                                </div>     
+                            {% endif %}
+                            
+                    
                         {% endif %}
                     {% endif %}
 
