Button padding in base.html added

--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -48,7 +48,7 @@
                             <a href="/accounts/logout" class="btn btn-outline-primary"><i class="#"></i>Logout</a>
                         </div>
                         {% else %}
-                        <div class="float-right">
+                        <div class="float-right" style="padding-left: 10px;">
                             <a href="/accounts/login" class="btn btn-outline-primary"><i class="#"></i>Sign In</a>
                         </div>
                         <div class="float-right">
