--- a/site/psi19/quiz/templates/quiz/signup.html
+++ b/site/psi19/quiz/templates/quiz/signup.html
@@ -9,13 +9,44 @@
 </p>
 {% endif %}
 
-<div style="padding:50px">
-    <h2>Sign up</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign up</button>
-    </form>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12 sign_up_form d-flex justify-content-center">
+                
+                <form method="post">
+                    {% csrf_token %}
+
+                    <h2>Sign up</h2>
+
+                    <label for="username_signup">Username</label>
+                    <p id="username_signup"> {{ form.username }} </p>
+
+                    <label for="email_signup">Email</label>
+                    <p id="email_signup"> {{ form.email }} </p>
+
+                    <label for="first_name_signup">First name</label>
+                    <p id="first_name_signup"> {{ form.first_name }} </p>
+
+                    <label for="last_name_signup">Last name</label>
+                    <p id="last_name_signup"> {{ form.last_name }} </p>
+
+                    <label for="age_signup">Age</label>
+                    <p id="age_signup"> {{ form.age }} </p>
+
+                    <label for="password_signup">Password</label>
+                    <p id="password_signup"> {{ form.password1 }} </p>
+
+                    <label for="password_conf_signup">Password</label>
+                    <p id="password_conf_signup"> {{ form.password2 }} </p>
+        
+                    <button class="btn btn-primary" type="submit">Sign up</button>
+
+                </form>
+                
+        </div>
+    </div>
 </div>
+
 
 {% endblock content %}
