--- a/site/psi19/quiz/templates/quiz/questions_that_need_validation.html
+++ b/site/psi19/quiz/templates/quiz/questions_that_need_validation.html
@@ -2,13 +2,46 @@
 
 {% block content %}
 
-<div style="padding:15px">
-
-    {% for question in questions %}
-
-    <a href="../questions/{{question.id}}/update/">{{question.question}}</a>
-    <br />
-    {% endfor %}
+<div class="container">
+    <div class="row">
+        {% for question in questions %}
+        <div class="col-md-3">
+            <div class="card">
+                <div class="card_header">
+                    <h6></h6>
+                </div>
+        
+                <div class="question_card">
+                    <p>{{question.question}}</p>
+                    <p>{{question.answer_one}}</p>
+                    <p>{{question.answer_two}}</p>
+                    <p>{{question.answer_three}}</p>
+                    <p>{{question.answer_four}}</p>
+                    <p>{{question.correct}}</p>
+                </div>
+        
+                <span>
+                    <form method='GET' action="/approve_question/">
+                        <p class="button_p">
+                            <input type="hidden" name="operation" value='ok'>
+                            <input type="hidden" name="id" value='{{question.id}}'>
+                            <button type="submit" class="add_button"><i class="ti-thumb-up"></i></button>
+                        </p>
+                    </form>
+                    
+                    <form method='GET' action="/approve_question/">
+                        <p class="button_p">
+                            <input type="hidden" name="operation" value='not'>
+                            <input type="hidden" name="id" value='{{question.id}}'>
+                            <button type="submit" class="remove_button"><i class="ti-thumb-down"></i></button>
+                        </p>
+                    </form>
+                </span>            
+            </div>
+        </div>
+        
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock content %}
