Approve Moderator Form Added

--- a/site/psi19/quiz/templates/quiz/base.html
+++ b/site/psi19/quiz/templates/quiz/base.html
@@ -101,7 +101,7 @@
                                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                             <a class="dropdown-item" href="{% url 'quiz:submit_a_question' %}">Dodaj pitanje</a>
                                             <a class="dropdown-item" href="{% url 'quiz:needs_validation' %}">Odobri pitanje</a>
-                                            <a class="dropdown-item" href="single-blog.html">Dodeli moderatora</a>
+                                            <a class="dropdown-item" href="{% url 'quiz:moderator_candidates' %}">Dodeli moderatora</a>
                                             <a class="dropdown-item" href="single-blog.html">Blokiraj korisnika</a>
 
                                         </div>
