--- a/site/psi19/quiz/templates/quiz/search_results.html
+++ b/site/psi19/quiz/templates/quiz/search_results.html
@@ -72,7 +72,16 @@
                                             <input type="hidden" name="username" value='{{record.user.username}}'>
                                             <input type="submit" class="btn btn-outline-primary" value="CONFIRM REQUEST"></input>
                                         </form>
-                                    </div>        
+                                    </div>   
+                                
+                                    <!-- ako mi je ipak poslao zahtev, mogu da ga prihvatim -->
+                                    <div class="card-body text-center">
+                                        <form method="GET" action="/deny_request/">
+                                            <!--!!!! Nabudzeno resenje koje se uzda da su username takodje unique !!!!-->
+                                            <input type="hidden" name="username" value='{{record.user.username}}'>
+                                            <input type="submit" class="btn btn-outline-primary" value="DENY REQUEST"></input>
+                                        </form>
+                                    </div>   
                                 {% endif %}
 
                             {% else %}
